--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ main {
 
 .section-newsletter {
   width: 100%;
+  min-height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -409,6 +410,7 @@ footer .contact img {
   }
 
   .section-newsletter {
+    min-height: 200px;
     background: none;
   }
 
