--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ main {
   flex-direction: row;
   flex-wrap: wrap;
   padding-right: 5rem;
+  justify-content: center;
 }
 
 .prod-container {
@@ -269,6 +270,18 @@ footer .contact img {
 .social {
   display: flex;
   flex-direction: row;
+}
+
+@media only screen and (max-width: 2000px) and (min-width: 1400px) {
+  .prod-container {
+    min-width: 320px;
+  }
+}
+
+@media only screen and (max-width: 4000px) and (min-width: 2001px) {
+  .prod-container {
+    min-width: 420px;
+  }
 }
 
 @media (max-width: 900px) {
